unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/FFX_Period_Ending__c.field-meta.xml
<CustomField>
    <fullName>FFX_Period_Ending__c</fullName>
    <formula>pse__Time_Period__r.pse__End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Period Ending</label>
    <type>Date</type>
</CustomField>