unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/psa_report__Remaining_Capacity_Hours__c.field-meta.xml
<CustomField>
    <fullName>psa_report__Remaining_Capacity_Hours__c</fullName>
    <formula>IF(pse__Calendar_Hours__c=0,
0,
(pse__Calendar_Hours__c - pse__Assigned_Billable_Hours__c - pse__Assigned_Excluded_Hours__c - pse__Assigned_Credited_Hours__c - pse__Assigned_Non_Billable_Hours__c - pse__Held_Hours__c - pse__Unheld_Hours__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Remaining Capacity Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>