unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Assigned_Billable_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Assigned_Billable_Hours__c</fullName>
    <label>Assigned Billable Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>