unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Region__c.field-meta.xml
<CustomField>
    <fullName>pse__Region__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Region</label>
    <referenceTo>pse__Region__c</referenceTo>
    <relationshipLabel>Utilization Summary</relationshipLabel>
    <relationshipName>Utilization_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>