unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Resource_Role__c.field-meta.xml
<CustomField>
    <fullName>pse__Resource_Role__c</fullName>
    <label>Resource Role</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Associate Consultant</fullName>
            </value>
            <value>
                <fullName>Business Analyst</fullName>
            </value>
            <value>
                <fullName>Compliance Expert</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Director</fullName>
            </value>
            <value>
                <fullName>Global Lead</fullName>
            </value>
            <value>
                <fullName>Managing/Principal Consultant</fullName>
            </value>
            <value>
                <fullName>PMO</fullName>
            </value>
            <value>
                <fullName>Project Manager</fullName>
            </value>
            <value>
                <fullName>Regional Lead</fullName>
            </value>
            <value>
                <fullName>Senior Consultant</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>