unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Time_Period__c.field-meta.xml
<CustomField>
    <fullName>pse__Time_Period__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Time Period</label>
    <referenceTo>pse__Time_Period__c</referenceTo>
    <relationshipLabel>Utilization Summary</relationshipLabel>
    <relationshipName>Utilization_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>