unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Total_Hours_Opp_Pct_Weighted__c.field-meta.xml
<CustomField>
    <fullName>pse__Total_Hours_Opp_Pct_Weighted__c</fullName>
    <formula>pse__Assigned_Billable_Hours__c + pse__Assigned_Excluded_Hours__c + pse__Assigned_Credited_Hours__c + pse__Assigned_Non_Billable_Hours__c + pse__Held_Hours_Opp_Pct_Weighted__c + pse__Unheld_Hours_Opp_Pct_Weighted__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Hours Opp Pct Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>