unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Unheld_Hours__c.field-meta.xml
<CustomField>
    <fullName>pse__Unheld_Hours__c</fullName>
    <label>Unheld Hours</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>