unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Unheld_Hours_Opp_Pct_Weighted__c.field-meta.xml
<CustomField>
    <fullName>pse__Unheld_Hours_Opp_Pct_Weighted__c</fullName>
    <label>Unheld Hours Opp Pct Weighted</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>