unpackaged/main/default/objects/pse__Utilization_Summary__c/fields/pse__Utilization_Calculation__c.field-meta.xml
<CustomField>
    <fullName>pse__Utilization_Calculation__c</fullName>
    <label>Utilization Calculation</label>
    <referenceTo>pse__Utilization_Calculation__c</referenceTo>
    <relationshipLabel>Utilization Summary</relationshipLabel>
    <relationshipName>Utilization_Summary</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>